objects/advitya__Merged_Log__c.object
<CustomObject>
    <fields>
        <fullName>advitya__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Merged Logs</relationshipLabel>
        <relationshipName>Merged_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advitya__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Merged Logs</relationshipLabel>
        <relationshipName>Merged_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advitya__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advitya__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field for Lead Logs</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Merged Logs</relationshipLabel>
        <relationshipName>Merged_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Merged Log</label>
    <nameField>
        <label>Merged Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merged Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>